--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,7 @@ p {
 }
 .product > .btn {
   background-color: #f1c40f;
-  font-size: 20px;
+  font-size: 1.5rem;
   height: 40px;
   border-radius: 2px;
   margin: 15px 0;
