--- a/styles.css
+++ b/styles.css
@@ -34,13 +34,16 @@ a {
     flex-wrap: wrap;
   }
 }
-
 header {
-  height: 75px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  min-height: 75px;
+  padding: 0px 20px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+  align-items: center;
+  background-color: #eee;
 }
 @media (max-width: 650px) {
   .logo > img {
@@ -95,7 +98,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 50px 0px 0px;
+  margin: 75px 0px 0px;
 }
 h2 {
   font-size: 35px;
